[tool.poetry]
name = "pifi"
version = "0.1.0"
description = "Python Interactive Fiction Interpreter"
authors = ["Theofilos Intzoglou <int.teo@gmail.com>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyQt6 = "^6.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
pifi = "pifi:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]